--- a/_posts/2021-12-16-Jekyll.md
+++ b/_posts/2021-12-16-Jekyll.md
@@ -17,7 +17,7 @@ title: Jekyll
 ### 관단한 사용 방법
 
 * _post 폴더에 markdown파일을 생성하여 게시물을 작성할 수 있다.
-파일 제목에는 해당 날짜를 적는 것이 보편적이다.
+파일 제목에는 해당 날짜를 적어야 한다. (예: yyyy-mm-dd-title)
 * _config.yml 파일을 통해 블로그 속성 변경이 가능하다.
 * 해당 Jekyll이 설치된 폴더는 수정 즉시 add, commit, push 하자! 그래야지 블로그에 실제로 적용된 것을 확인 할 수 있다.
 * 많은 사람들이 제작한 [템플릿](http://jekyllthemes.org/)을 다운 받아 적용할 수 있다.
